Apply review comments
Co-Authored-By: Adam Schill Collberg <adam.schill.collberg@protonmail.com>
Co-Authored-By: Mats Rydberg <mats.rydberg@neotechnology.com>